--- a/Invadopodia/packages.config
+++ b/Invadopodia/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Imaging" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net45" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
   <package id="WPFFolderBrowser" version="1.0.2" targetFramework="net45" />
